Fix keyboard issues on firefox and safari. Fixes #3

--- a/src/sass/components/transitions.scss
+++ b/src/sass/components/transitions.scss
@@ -1,22 +1,11 @@
 .error-msg {
     &-enter,
     &-leave-to {
+        opacity: 0;
         transform: translate(-50%, -100%) !important;
     }
     &-enter-active,
     &-leave-active {
         transition: all 0.4s;
     }
-}
-
-.scale-list {
-    // &-item {
-    //     transition: transform 1s, box-shadow 0.4s;
-    // }
-
-    // &-enter,
-    // &-leave-to {
-    //     opacity: 0;
-    //     transform: translateY(30px);
-    // }
 }
